# SafetyAdvisor

./: Helix_Pitch_Presentation.md  Pitch.md  Q&A_Preparation.md  README.md  README_frontend_deploy.md  SaaS_template.md  dev-docker.sh  dev-local.sh
backend/: Dockerfile  app.py  main.py  pyproject.toml  requirements.txt
backend/auth/: dependencies.py
backend/db/: connection.py  models.py  queries.py
backend/prompts/: incident_prompt.txt  ptw_prompt.txt
backend/routers/: dashboard.py
backend/services/: dfagent.py  extractor.py  llm.py  ocr.py
frontend/: next.config.ts  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/dashboard/: page.tsx
frontend/src/app/incidents/: page.tsx
frontend/src/app/login/: page.tsx
frontend/src/app/ptw/: page.tsx
frontend/src/components/: theme-toggle.tsx
frontend/src/components/ui/: badge.tsx
frontend/src/lib/: api.ts
