[project]
name = "backend"
version = "0.1.0"
description = "SafetyAdvisor FastAPI Backend"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.13",
    "httpx>=0.28.1",
    "python-jose[cryptography]>=3.3.0",
    "python-dotenv>=1.1.0",
    "supabase>=2.15.3",
    "uvicorn[standard]>=0.34.3",
]
